--- a/src/catalog.html
+++ b/src/catalog.html
@@ -9,10 +9,10 @@ title: Главная страница
             <div class="catalog-slider__block">
                 <div class="catalog-slider__best">
                     <div class="catalog-slider__title">
-                        <div class="catalog-slider__title_main">
+                        <a href="#" class="catalog-slider__title_main">
                             <span class="catalog-slider__title_main_text">Лучшая подборка</span>
                             <img src="assets/images/home/icons/arrow-right.svg" class="catalog-slider__title_main_icon" alt="">
-                        </div>
+                        </a>
                         <div class="catalog-slider__title_secondary">
                             <span class="catalog-slider__title_secondary_text">То что любят пользователи</span>
                             <span class="catalog-slider__title_secondary_icon"></span>
@@ -55,10 +55,10 @@ title: Главная страница
                 </div>
                 <div class="catalog-slider__discount">
                     <div class="catalog-slider__title">
-                        <div class="catalog-slider__title_main">
+                        <a href="#" class="catalog-slider__title_main">
                             <span class="catalog-slider__title_main_text">Скидка дня</span>
                             <img src="assets/images/home/icons/arrow-right.svg" class="catalog-slider__title_main_icon" alt="">
-                        </div>
+                        </a>
                         <div class="catalog-slider__title_secondary">
                             <span class="catalog-slider__title_secondary_text">Игры выбранные нами</span>
                             <span class="catalog-slider__title_secondary_icon"></span>
@@ -84,10 +84,10 @@ title: Главная страница
                 </div>
                 <div class="catalog-slider__sold">
                     <div class="catalog-slider__title">
-                        <div class="catalog-slider__title_main">
+                        <a href="#" class="catalog-slider__title_main">
                             <span class="catalog-slider__title_main_text">Скоро закончатся</span>
                             <img src="assets/images/home/icons/arrow-right.svg" class="catalog-slider__title_main_icon" alt="">
-                        </div>
+                        </a>
                         <div class="catalog-slider__title_secondary">
                             <span class="catalog-slider__title_secondary_text">Ваш последний шанс</span>
                             <span class="catalog-slider__title_secondary_icon"></span>
@@ -207,7 +207,7 @@ title: Главная страница
         <div class="container">
             <div class="catalog-filter__info arrow-divide">
                 <div class="catalog-filter__info_title">
-                    <div class="catalog-filter__info_title_name">Каталог</div>
+                    <a href="#" class="catalog-filter__info_title_name">Каталог</a>
                     <div class="catalog-filter__info_title_arrow"><img src="assets/images/home/icons/arrow-right.svg" alt=""></div>
                     <div class="catalog-filter__info_title_active">Xbox</div>
                 </div>
@@ -651,10 +651,12 @@ title: Главная страница
                             </div>
                             <div class="pre-order__card_contact">
                                 <a href="#" class="pre-order__card_link">
-                                    <img src="assets/images/icons/telegram.svg" alt="">
+                                    <img class="pre-order__card_link_bg" src="assets/images/icons/bg-line.svg" alt="">
+                                    <img class="pre-order__card_link_icon" src="assets/images/icons/telegram-colored.svg" alt="">
                                 </a>
                                 <a href="#" class="pre-order__card_link">
-                                    <img src="assets/images/icons/whatsapp.svg" alt="">
+                                    <img class="pre-order__card_link_bg" src="assets/images/icons/bg-line.svg" alt="">
+                                    <img class="pre-order__card_link_icon" src="assets/images/icons/whatsapp-colored.svg" alt="">
                                 </a>
                             </div>
 
