--- a/src/cart.html
+++ b/src/cart.html
@@ -648,7 +648,7 @@ title: Главная страница
                         <div class="cart-comments__form_block">
                             <img class="cart-comments__form_emoji" src="assets/images/icons/emoji.svg" alt="">
                             <textarea class="pre-order__subs_input" placeholder="Оставить комментарий..." name="" id=""></textarea>
-                            <button class="pre-order__subs_btn btn">Написать</button>
+                            <button class="pre-order__subs_btn btn-blur">Написать</button>
                         </div>
                     </form>
                     <div class="cart-comments__items">
