--- a/src/index.html
+++ b/src/index.html
@@ -590,7 +590,7 @@ title: Главная страница
                         <li class="splide__slide">
                             <div class="home-markets__slide">
                                 <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    <img class="home-markets__img_item" src="assets/images/home/avito.svg" alt="">
                                 </div>
                                 <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
@@ -598,7 +598,7 @@ title: Главная страница
                         <li class="splide__slide">
                             <div class="home-markets__slide">
                                 <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    <img class="home-markets__img_item" src="assets/images/home/g2a.svg" alt="">
                                 </div>
                                 <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
@@ -606,7 +606,7 @@ title: Главная страница
                         <li class="splide__slide">
                             <div class="home-markets__slide">
                                 <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    <img class="home-markets__img_item" src="assets/images/home/kinguin.svg" alt="">
                                 </div>
                                 <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
@@ -614,7 +614,7 @@ title: Главная страница
                         <li class="splide__slide">
                             <div class="home-markets__slide">
                                 <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    <img class="home-markets__img_item" src="assets/images/home/wildb.svg" alt="">
                                 </div>
                                 <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
@@ -622,7 +622,23 @@ title: Главная страница
                         <li class="splide__slide">
                             <div class="home-markets__slide">
                                 <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    <img class="home-markets__img_item" src="assets/images/home/ozon.svg" alt="">
+                                </div>
+                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
+                            </div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="home-markets__slide">
+                                <div class="home-markets__img">
+                                    <img class="home-markets__img_item" src="assets/images/home/gamivo.svg" alt="">
+                                </div>
+                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
+                            </div>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="home-markets__slide">
+                                <div class="home-markets__img">
+                                    <img class="home-markets__img_item" src="assets/images/home/gameflip.svg" alt="">
                                 </div>
                                 <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
