--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,21 @@ title: Главная страница
                     </ul>
                 </div>
             </div>
+            <div class="home-main-slider__block">
+                <div class="home-main-slider__steam home-main-slider__card">
+                    <div class="home-main-slider__steam_bg"></div>
+                    <div class="home-main-slider__steam_img">
+                        <img class="home-main-slider__steam_img_item" src="assets/images/home-new/main-wallet.png" alt="">
+                    </div>
+                    <div class="home-main-slider__steam_content">
+                        <div class="home-main-slider__card_name">Пополнение</div>
+                        <div class="home-main-slider__card_title">STEAM</div>
+                        <div class="home-main-slider__card_btn">ВСЕГО 5%</div>
+                    </div>
+                </div>
+                <div class="home-main-slider__gamegift home-main-slider__card"></div>
+                <div class="home-main-slider__pays"></div>
+            </div>
         </div>
     </section>
 
