--- a/src/index.html
+++ b/src/index.html
@@ -281,7 +281,9 @@ title: Главная страница
     <section class="container-fluid home-statics">
         <div class="container">
 
-            <div class="home-statics__title">Наша статистика</div>
+            <div class="home-statics__title">
+                <span class="home-statics__title_bg">Наша статистика</span>
+            </div>
 
             <div class="splide">
                 <div class="splide__track">
