--- a/src/index.html
+++ b/src/index.html
@@ -409,10 +409,14 @@ title: Главная страница
                 </div>
             </div>
 
+            <div class="home-statics__bg"></div>
+            <div class="home-statics__border_bottom"></div>
+            <div class="home-statics__border_top"></div>
         </div>
     </section>
 
-    <section class="container-fluid game-slider">
+    <section class="container-fluid game-slider main-bg-color">
+        <div class="home-top-bg"></div>
         <div class="container">
 
             <div class="game-slider__block game-swiper-2">
@@ -536,6 +540,7 @@ title: Главная страница
     </section>
 
     <section class="container-fluid game-slider">
+
         <div class="container">
 
             <div class="game-slider__block game-swiper-3">
