--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider home-game-slider">
+    <section class="container-fluid game-slider home-slider-mb">
         <div class="game-slider__bg"></div>
         <div class="container">
 
@@ -359,11 +359,11 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-statics">
+    <section class="container-fluid home-statics home-loop-block">
         <div class="container">
 
-            <div class="home-statics__title">
-                <span class="home-statics__title_bg">Наша статистика</span>
+            <div class="home-loop-block__title">
+                <span class="home-loop-block__title_bg">Наша статистика</span>
             </div>
 
             <div class="splide">
@@ -408,10 +408,13 @@ title: Главная страница
                     </ul>
                 </div>
             </div>
+            
+            <div class="home-loop-block__border_bottom"></div>
+            <div class="home-loop-block__border_top"></div>
+        </div>
 
-            <div class="home-statics__bg"></div>
-            <div class="home-statics__border_bottom"></div>
-            <div class="home-statics__border_top"></div>
+        <div class="home-loop-block__bg_block">
+            <div class="home-loop-block__bg"></div>
         </div>
     </section>
 
@@ -539,7 +542,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider">
+    <section class="container-fluid game-slider home-slider-mb">
 
         <div class="container">
 
@@ -663,9 +666,11 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-markets">
+    <section class="container-fluid home-markets home-loop-block">
         <div class="container">
-            <div class="home-markets__title">Мы на других ресурсах</div>
+            <div class="home-loop-block__title">
+                <span class="home-loop-block__title_bg">Мы на других ресурсах</span>
+            </div>
             <div class="splide">
                 <div class="splide__track">
                     <ul class="splide__list">
@@ -674,7 +679,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -682,7 +686,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/avito.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -690,7 +693,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/g2a.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -698,7 +700,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/kinguin.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -706,7 +707,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/wildb.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -714,7 +714,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/ozon.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -722,7 +721,6 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/gamivo.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -730,12 +728,17 @@ title: Главная страница
                                 <div class="home-markets__img">
                                     <img class="home-markets__img_item" src="assets/images/home/gameflip.svg" alt="">
                                 </div>
-                                <a href="#" class="home-markets__link btn-arrow">Перейти на сайт</a>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="home-loop-block__border_bottom"></div>
+            <div class="home-loop-block__border_top"></div>
+
+        </div>
+        <div class="home-loop-block__bg_block">
+            <div class="home-loop-block__bg"></div>
         </div>
     </section>
 
