--- a/src/index.html
+++ b/src/index.html
@@ -408,7 +408,7 @@ title: Главная страница
                     </ul>
                 </div>
             </div>
-            
+
             <div class="home-loop-block__border_bottom"></div>
             <div class="home-loop-block__border_top"></div>
         </div>
@@ -543,7 +543,7 @@ title: Главная страница
     </section>
 
     <section class="container-fluid game-slider home-slider-mb">
-
+        <div class="game-slider__bg"></div>
         <div class="container">
 
             <div class="game-slider__block game-swiper-3">
@@ -815,7 +815,8 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider">
+    <section class="container-fluid game-slider home-slider-mb">
+        <div class="game-slider__bg"></div>
         <div class="container">
 
             <div class="game-slider__block game-swiper-4">
@@ -978,15 +979,21 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-blog">
+    <section class="container-fluid home-blog home-loop-block">
         <div class="container">
-            <div class="home-blog__block">
+            <div class="home-loop-block__title">
+                <span class="home-loop-block__title_bg">
+                    <div class="home-blog__title_main"><span class="_orange">BIS</span> BLOG</div>
+                    <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
+                </span>
+            </div>
+            <!-- <div class="home-blog__block">
                 <div class="home-blog__title">
                     <div class="home-blog__title_main"><span class="_orange">BIS</span> BLOG</div>
                     <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
                 </div>
                 <a href="#" class="home-blog__btn btn-arrow">Читать весь блог</a>
-            </div>
+            </div> -->
 
             <div class="splide">
                 <div class="splide__track">
@@ -1019,6 +1026,7 @@ title: Главная страница
                 </div>
             </div>
 
+            <div class="home-loop-block__border_top"></div>
 
         </div>
     </section>
