--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid game-slider home-slider-mb">
+    <section class="container-fluid game-slider home-slider-mb home-slider-pt">
         <div class="game-slider__bg"></div>
         <div class="container">
 
@@ -987,13 +987,6 @@ title: Главная страница
                     <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
                 </span>
             </div>
-            <!-- <div class="home-blog__block">
-                <div class="home-blog__title">
-                    <div class="home-blog__title_main"><span class="_orange">BIS</span> BLOG</div>
-                    <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
-                </div>
-                <a href="#" class="home-blog__btn btn-arrow">Читать весь блог</a>
-            </div> -->
 
             <div class="splide">
                 <div class="splide__track">
@@ -1032,6 +1025,7 @@ title: Главная страница
     </section>
 
     <section class="container-fluid home-reviews">
+        <div class="home-reviews__bg"></div>
         <div class="container">
             <div class="home-reviews__title">Последние оставленные отзывы</div>
 
