--- a/src/index.html
+++ b/src/index.html
@@ -237,122 +237,32 @@ title: Главная страница
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
+                            <div class="new-card">
+                                <div class="new-card__bg">
+
+                                    <div class="new-card__img">
+                                        <img class="new-card__img_item" src="http://via.placeholder.com/300x600" alt="">
                                     </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
+
+                                    <div class="new-card__content">
+                                        <div class="new-card__title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, quibusdam!</div>
+                                        <div class="new-card__subtitle"><span class="new-card__subtitle_name">Жанр:</span> <span class="new-card__subtitle_item">Аркада</span></div>
+                                        <div class="new-card__newprice">5.450 ₽</div>
+                                        <div class="new-card__oldprice">Без скидки: 10 900 ₽</div>
                                     </div>
-                                    <div class="game-card__discount">-20%</div>
+
                                 </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
+                                <div class="new-card__btn">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                                        <path d="M20.8855 8.96137C20.2155 8.22136 19.2055 7.79137 17.8055 7.64137V6.88137C17.8055 5.51137 17.2255 4.19137 16.2055 3.27137C15.1755 2.33137 13.8355 1.89137 12.4455 2.02137C10.0555 2.25137 8.04553 4.56137 8.04553 7.06137V7.64137C6.64553 7.79137 5.63553 8.22136 4.96553 8.96137C3.99553 10.0414 4.02553 11.4814 4.13553 12.4814L4.83553 18.0514C5.04553 20.0014 5.83553 22.0014 10.1355 22.0014H15.7155C20.0155 22.0014 20.8055 20.0014 21.0155 18.0614L21.7155 12.4714C21.8255 11.4814 21.8455 10.0414 20.8855 8.96137ZM12.5855 3.41137C13.5855 3.32137 14.5355 3.63137 15.2755 4.30137C16.0055 4.96137 16.4155 5.90137 16.4155 6.88137V7.58137H9.43553V7.06137C9.43553 5.28137 10.9055 3.57137 12.5855 3.41137ZM9.34553 13.1514H9.33553C8.78553 13.1514 8.33553 12.7014 8.33553 12.1514C8.33553 11.6014 8.78553 11.1514 9.33553 11.1514C9.89553 11.1514 10.3455 11.6014 10.3455 12.1514C10.3455 12.7014 9.89553 13.1514 9.34553 13.1514ZM16.3455 13.1514H16.3355C15.7855 13.1514 15.3355 12.7014 15.3355 12.1514C15.3355 11.6014 15.7855 11.1514 16.3355 11.1514C16.8955 11.1514 17.3455 11.6014 17.3455 12.1514C17.3455 12.7014 16.8955 13.1514 16.3455 13.1514Z" fill="#847F7D" />
+                                    </svg>
                                 </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- <div class="new-card">
-                        <div class="new-card__bg">
-                            <div class="new-card__img">
-                                <img class="new-card__img_item" src="assets/images/home/card-image.png" alt="">
-                            </div>
 
-                            <div class="new-card__content">
-                                <div class="new-card__title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, quibusdam!</div>
-                                <div class="new-card__subtitle"><span class="new-card__subtitle_name">Жанр:</span> <span class="new-card__subtitle_item">Аркада</span></div>
-                                <div class="new-card__newprice">5.450 ₽</div>
-                                <div class="new-card__oldprice">Без скидки: 10 900 ₽</div>
-                            </div>
-                        </div>
-                    </div> -->
 
             </div>
 
