--- a/src/basket.html
+++ b/src/basket.html
@@ -257,8 +257,49 @@ title: Корзина
                         </div>
                     </div>
                 </div>
+
                 <div class="basket-page__info">
-                    <div class="basket-page__price"></div>
+                    <div class="basket-page__price_border">
+                        <div class="basket-page__price">
+                            <div class="basket-page__price_promo">
+                                <input type="text" class="basket-page__price_promo_input" placeholder="Ваш промокод">
+                                <button type="text" class="basket-page__price_promo_btn">Применить</button>
+                            </div>
+                            <div class="basket-page__price_info">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="386" height="242" viewBox="0 0 386 242" fill="none">
+                                    <g filter="url(#filter0_d_678_15998)">
+                                        <path d="M0 203.515V6C0 2.68629 2.68629 0 5.99999 0H354C357.314 0 360 2.68629 360 6V203.515C360 208.86 353.537 211.537 349.757 207.757L346.243 204.243C343.9 201.899 340.101 201.899 337.757 204.243L328.243 213.757C325.9 216.101 322.101 216.101 319.757 213.757L310.243 204.243C307.9 201.899 304.101 201.899 301.757 204.243L292.243 213.757C289.9 216.101 286.101 216.101 283.757 213.757L274.243 204.243C271.9 201.899 268.101 201.899 265.757 204.243L256.243 213.757C253.899 216.101 250.101 216.101 247.757 213.757L238.243 204.243C235.899 201.899 232.101 201.899 229.757 204.243L220.243 213.757C217.899 216.101 214.101 216.101 211.757 213.757L202.243 204.243C199.899 201.899 196.101 201.899 193.757 204.243L184.243 213.757C181.899 216.101 178.101 216.101 175.757 213.757L166.243 204.243C163.899 201.899 160.101 201.899 157.757 204.243L148.243 213.757C145.899 216.101 142.101 216.101 139.757 213.757L130.243 204.243C127.899 201.899 124.101 201.899 121.757 204.243L112.243 213.757C109.899 216.101 106.101 216.101 103.757 213.757L94.2426 204.243C91.8995 201.899 88.1005 201.899 85.7574 204.243L76.2426 213.757C73.8995 216.101 70.1005 216.101 67.7574 213.757L58.2426 204.243C55.8995 201.899 52.1005 201.899 49.7574 204.243L40.2426 213.757C37.8995 216.101 34.1005 216.101 31.7574 213.757L22.2426 204.243C19.8995 201.899 16.1005 201.899 13.7574 204.243L10.2426 207.757C6.46285 211.537 0 208.86 0 203.515Z" fill="url(#paint0_linear_678_15998)" shape-rendering="crispEdges" />
+                                    </g>
+                                    <defs>
+                                        <filter id="filter0_d_678_15998" x="0" y="0" width="386" height="241.516" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                            <feOffset dy="12" />
+                                            <feGaussianBlur stdDeviation="6.5" />
+                                            <feComposite in2="hardAlpha" operator="out" />
+                                            <feColorMatrix type="matrix" values="0 0 0 0 0.1125 0 0 0 0 0.0945 0 0 0 0 0.084375 0 0 0 0.56 0" />
+                                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_678_15998" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_678_15998" result="shape" />
+                                        </filter>
+                                        <linearGradient id="paint0_linear_678_15998" x1="193" y1="1" x2="193" y2="219" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#201C1A" stop-opacity="0" />
+                                            <stop offset="1" stop-color="#2D2824" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <div class="basket-page__price_info_block">
+                                    <div class="basket-page__price_info_all">
+                                        <span class="basket-page__price_info">Без скидки:</span>
+                                        <span>12 580₽</span>
+                                    </div>
+                                    <div class="basket-page__price_info_nodiscount"></div>
+                                    <div class="basket-page__price_info_discount"></div>
+                                </div>
+                            </div>
+                            <div class="basket-page__price_contract"></div>
+                            <div class="basket-page__price_btn"></div>
+                        </div>
+                    </div>
                     <div class="basket-page__others"></div>
                 </div>
             </div>
