--- a/src/basket.html
+++ b/src/basket.html
@@ -288,12 +288,26 @@ title: Корзина
                                     </defs>
                                 </svg>
                                 <div class="basket-page__price_info_block">
-                                    <div class="basket-page__price_info_all">
-                                        <span class="basket-page__price_info">Без скидки:</span>
-                                        <span>12 580₽</span>
+                                    <div class="basket-page__price_info_table _main">
+                                        <span class="basket-page__price_info_title _title">Итог:</span>
+                                        <span class="basket-page__price_info_value _value">6290₽</span>
                                     </div>
-                                    <div class="basket-page__price_info_nodiscount"></div>
-                                    <div class="basket-page__price_info_discount"></div>
+                                    <div class="basket-page__price_info_table">
+                                        <span class="basket-page__price_info_title">Без скидки:</span>
+                                        <span class="basket-page__price_info_value">12 580₽</span>
+                                    </div>
+                                    <div class="basket-page__price_info_table">
+                                        <span class="basket-page__price_info_title">Вы сэкономили:</span>
+                                        <span class="basket-page__price_info_value">-6290₽</span>
+                                    </div>
+                                    <div class="basket-page__price_info_table">
+                                        <span class="basket-page__price_info_title">Скидка:</span>
+                                        <span class="basket-page__price_info_value _percent">50%</span>
+                                    </div>
+                                    <div class="basket-page__price_info_table _bonus">
+                                        <span class="basket-page__price_info_title">Скидка:</span>
+                                        <span class="basket-page__price_info_value _bonus_value">00.0₽</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="basket-page__price_contract"></div>
