--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,45 @@ title: Главная страница
                                 </div>
                             </div>
                         </li>
+                        <li class="splide__slide">
+                            <div class="hot-slider__item">
+                                <div class="hot-slider__img">
+                                    <div class="hot-slider__img_over"></div>
+                                    <img class="hot-slider__img_item" src="assets/images/home-new/main-slider-1.png" alt="">
+                                </div>
+                                <div class="hot-slider__content">
+                                    <div class="hot-slider__title">
+                                        <div class="hot-slider__title_text">Купить <span class="text-orange">Days Gone</span></div>
+                                        <div class="hot-slider__title_category">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="47" height="10" viewBox="0 0 47 10" fill="none">
+                                                <path d="M39.2762 0.814949C39.2713 0.818682 39.2676 0.822789 39.2631 0.826522C39.2904 0.797777 39.3296 0.766791 39.3553 0.749992C40.1072 0.261321 40.9759 0 41.9398 0C42.8414 0 43.6858 0.249002 44.4067 0.682049C44.4589 0.713034 44.6015 0.810843 44.6751 0.899692C43.9796 0.132901 41.9353 1.77848 41.9353 1.77848C41.2283 1.23344 40.5779 0.861987 40.0938 0.729833C39.6891 0.618958 39.4091 0.711541 39.2762 0.814949ZM45.4628 1.53993C45.4415 1.51641 45.4184 1.49438 45.3971 1.47012C45.2213 1.27711 45.0051 1.23045 44.8102 1.24314C44.6329 1.29877 43.8135 1.59406 42.8037 2.54751C42.8037 2.54751 43.9404 3.6529 44.6366 4.78293C45.3321 5.91295 45.748 6.80107 45.4923 8.03376C46.2684 7.18074 46.7418 6.04735 46.7418 4.80271C46.7418 3.54314 46.2568 2.39669 45.4628 1.53993ZM43.7276 5.26562C43.4193 4.91956 42.9605 4.4238 42.3546 3.82126C42.222 3.68948 42.082 3.5521 41.935 3.40987C41.935 3.40987 41.7136 3.63125 41.4254 3.92243V3.92206C41.0565 4.29463 40.5783 4.78069 40.3129 5.06441C39.8403 5.56876 38.4863 7.15274 38.4101 8.04086C38.4101 8.04086 38.1088 7.33641 38.77 5.71174C39.2019 4.64965 40.507 3.05485 41.0521 2.53519C41.0521 2.53519 40.5541 1.98716 39.9291 1.60862L39.9254 1.6075C39.9254 1.6075 39.9183 1.6019 39.9071 1.59481C39.6066 1.41561 39.2784 1.27749 38.9626 1.2592C38.6401 1.28197 38.4359 1.5179 38.4359 1.5179C37.6299 2.37728 37.1367 3.53232 37.1367 4.80309C37.1367 7.4555 39.287 9.60617 41.9398 9.60617C43.3476 9.60617 44.6142 8.99916 45.493 8.03414C45.4927 8.03264 45.3919 7.3995 44.7456 6.49122C44.5937 6.27843 44.0386 5.6143 43.7276 5.26562Z" fill="#847F7D" />
+                                                <path d="M18.8522 6.4682L18.4326 6.63136C17.8033 6.89942 17.4769 7.17914 17.4886 7.42389C17.5235 7.78519 17.9315 8.05325 18.6774 8.25138C19.6447 8.50778 20.6237 8.56606 21.6377 8.41454V7.40058L20.8335 7.7036C19.9944 7.99497 19.5631 7.75022 19.5631 7.75022C19.4349 7.66864 19.3767 7.47051 19.7263 7.3423L20.1692 7.17914L21.6377 6.65467V5.47754L21.2647 5.60574L18.8522 6.4682Z" fill="#847F7D" />
+                                                <path d="M24.9811 2.37757V5.39616C25.6105 5.69919 26.1699 5.7225 26.5895 5.40782C27.0207 5.10479 27.2538 4.58033 27.2538 3.7878C27.2538 2.96031 27.0906 2.33096 26.7293 1.91138C26.403 1.4685 25.8203 1.09555 24.9578 0.80418C23.8856 0.454536 22.9765 0.151512 22.2539 0V9.03245L24.2003 9.62685V2.12117C24.1886 1.66663 24.9811 1.7016 24.9811 2.37757Z" fill="#847F7D" />
+                                                <path d="M29.9283 7.03877C29.9167 6.72409 29.5437 6.47934 28.8794 6.2579C28.1335 6.01315 27.4925 5.8966 26.7932 5.91991C26.1522 5.93157 25.3829 6.14135 24.6953 6.36279V7.51662L26.5834 6.85229C26.5834 6.85229 27.1545 6.64251 27.644 6.77071C28.0169 6.86395 27.9936 7.07374 27.6207 7.20194L27.1894 7.37676L24.6953 8.27418V9.45131L25.8608 9.03174L28.6579 8.04108L28.9843 7.88957C29.6602 7.64482 29.9633 7.37676 29.9283 7.03877Z" fill="#847F7D" />
+                                                <path d="M9.68881 0H0.603038C0.270563 0 0 0.270563 0 0.603038V6.59321C0 6.92569 0.270563 7.19625 0.603038 7.19625H9.68881C10.0213 7.19625 10.2918 6.92569 10.2918 6.59321V0.603038C10.2918 0.270563 10.0213 0 9.68881 0Z" fill="#847F7D" />
+                                                <path d="M8.36673 8.68426H6.73853V7.7998H3.56253V8.68426H1.93433C1.76789 8.68426 1.63281 8.81934 1.63281 8.98578C1.63281 9.15222 1.76789 9.2873 1.93433 9.2873H8.36673C8.53317 9.2873 8.66825 9.15222 8.66825 8.98578C8.66825 8.81934 8.53317 8.68426 8.36673 8.68426Z" fill="#847F7D" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="hot-slider__info">
+                                        <div class="hot-slider__info_item">
+                                            <div class="hot-slider__info_title">Регион активации:</div>
+                                            <div class="hot-slider__info_text">Россия и СНГ</div>
+                                        </div>
+                                        <div class="hot-slider__info_item">
+                                            <div class="hot-slider__info_title">Система активации:</div>
+                                            <div class="hot-slider__info_text">Steam</div>
+                                        </div>
+                                    </div>
+                                    <div class="hot-slider__text">Очередной эксклюзив от Sony, перекочевавший на персональные компьютеры. Постапокалиптический экшен от третьего лица Days Gone предлагает погрузиться</div>
+                                </div>
+                                <div class="hot-slider__action">
+                                    <div class="hot-slider__price">5.450 ₽</div>
+                                    <div class="hot-slider__discount">Без скидки: 10 900 ₽</div>
+                                    <div class="hot-slider__pagination"></div>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
